script.js fixes to display on mobile devices

--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@
     border-spacing: 40px;   /* spacing between rows */
     /* border: 2px solid; */
 }
+
+.mobileTable {
+  width: 100%;
+  padding: 5px 5px;
+  margin-left: auto;
+  margin-right: auto;
+  border-spacing: 2px 40px;
+}
+
 .row {
     display: table-row;
     padding: 20px 20px;
